<resources>
    <string name="app_name">ST099_Ghost OC Maker</string>
    <string name="go_to_setting_title">Permission settings</string>
    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Intro2">Random Ghost</string>
    <string name="Intro1">Create Your Own Ghost</string>
    <string name="Intro3">Random Ghost</string>
    <string name="next">Next</string>
    <string name="Permission">Permission</string>
    <string name="splash1">Ghost OC Maker</string>
    <string name="splash2">This action can contain ads</string>
    <string name="permission1">Allow <font color="#FF84AC">Ghost OC Maker</font> to access photos,\n media and files on your device</string>
    <string name="language">Language</string>
    <string name="Media">Media</string>
    <string name="Continue">Continue</string>
    <string name="Rate">Rate</string>
    <string name="Exit">Exit</string>
    <string name="Main">Ghost Maker</string>
    <string name="Main1">create Ghost</string>
    <string name="createGhost">Create Ghost</string>
    <string name="MyCreation">My Creation</string>
    <string name="Category">Category</string>
    <string name="Setting">Settings</string>
    <string name="RateUs">Rate Us</string>
    <string name="Share">Share</string>
    <string name="Privacy"><![CDATA[Privacy & Policy]]></string>
    <string name="TitleRate">Do you like the app?</string>
    <string name="DescRate">Let us know your experience</string>
    <string name="onestart">Oh, no!</string>
    <string name="onestartdesc">Please give us some feedback</string>
    <string name="fowstart">We love you too!</string>
    <string name="forstartdesc">Thanks for your feedback</string>
    <string name="myAlbum">My Album</string>
    <string name="Create">Create</string>
    <string name="Delete">Delete</string>
    <string name="DescDelete">Do you want to delete this item?</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="cancel">Cancle</string>
</resources>