<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.SettingActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <com.example.st099_ghostocmaker.TextStroke
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dp"
            android:fontFamily="@font/jejuhallasan"
            android:text="@string/Setting"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:src="@drawable/ic_back"
            android:layout_height="30dp"
            android:layout_marginTop="61dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <LinearLayout
            android:id="@+id/LNLanguage"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/sets"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="22dp"
                android:src="@drawable/language" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:fontFamily="@font/chelsea_market"
                android:paddingHorizontal="16dp"
                android:text="@string/language"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="5dp"
                android:src="@drawable/right" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LNRateUS"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/sets"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LNLanguage">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="22dp"
                android:src="@drawable/settingstar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:fontFamily="@font/chelsea_market"
                android:paddingHorizontal="16dp"
                android:text="@string/RateUs"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="5dp"
                android:src="@drawable/right" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LnShare"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/sets"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LNRateUS">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="22dp"
                android:src="@drawable/share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:fontFamily="@font/chelsea_market"
                android:paddingHorizontal="16dp"
                android:text="@string/Share"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="5dp"
                android:src="@drawable/right" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LNPrivate"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/sets"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LnShare">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="22dp"
                android:src="@drawable/pricacy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:fontFamily="@font/chelsea_market"
                android:paddingHorizontal="16dp"
                android:text="@string/Privacy"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="5dp"
                android:src="@drawable/right" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/gray"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>